<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/search_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dashboard_tile_image_margin"
        android:paddingEnd="@dimen/dashboard_tile_image_margin"
        android:paddingTop="@dimen/dashboard_tile_image_margin"
        android:elevation="4dp">

        <Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:contentInsetStartWithNavigation="0dp"
            android:theme="?android:attr/actionBarTheme">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/search_view"
                    android:background="@drawable/jing_search_bar_background"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/search_bar_height"
                    android:iconifiedByDefault="false"
                    android:layout_marginEnd="14dp"
                    android:queryHint="@string/search_hint"
                    android:imeOptions="actionSearch|flagNoExtractUi"
                    android:searchIcon="@drawable/ic_search2"
                    android:closeIcon="@drawable/ic_search_clear"/>

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryColor"
                    android:textSize="20sp"
                    android:text="@string/search_cancel" />

            </LinearLayout>
        </Toolbar>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dashboard_tile_image_margin"
        android:paddingEnd="@dimen/dashboard_tile_image_margin"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/search_history" />

        <TextView
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:text="@string/search_clear_history" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Padding is included in the background -->
        <LinearLayout
            android:id="@+id/no_results_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="123dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/empty_search_results2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/empty_text_color"
                android:text="@string/search_no_results"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dashboard_padding_bottom"
            android:paddingEnd="@dimen/dashboard_padding_end"
            android:paddingStart="@dimen/dashboard_padding_start"
            android:paddingTop="@dimen/dashboard_padding_top"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical" />

    </FrameLayout>

    <include layout="@layout/search_feedback" />

</LinearLayout>